# firedrake

./: MLIR_BACKEND_SUMMARY.md  mlir-replacement-plan.md  mlir_validation_results.json  test_mlir_standalone.py
firedrake/mlir_backend/: BUILD_AND_VERIFICATION_SUMMARY.md  BUILD_SUCCESS_REPORT.md  CHECK_MLIR_INSTALLATION.sh  CMakeLists.txt  COMPLETE_MIGRATION_REPORT.md  COMPLETE_MLIR_NATIVE_INTEGRATION.md  CORRECT_USAGE_EXAMPLES.cpp  ESSENTIAL_MLIR_PATTERNS.md  FINAL_BUILD_SUCCESS_REPORT.md  FINAL_BUILD_VALIDATION.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MLIR_BACKEND_STATUS.md  MLIR_CPP_VERIFICATION_COMPLETE.md  MLIR_DIALECT_USAGE_GUIDE.md  README.md  STUB_RESOLUTION_SUMMARY.md  UFL_TO_MLIR_EXAMPLES.md  __init__.py  compiler.py  config.py  demo_mlir.py  direct_compiler.py  gem_replacement.py  integration_example.py  mlir_codegen.py  mlir_kernel_builder.py  setup.py  test_clean_architecture.py  test_complete_pipeline.py  test_mlir_optimizations.py  tsfc_replacement.py  ufl_to_mlir_direct.py
firedrake/mlir_backend/include/: SparseTensorSupport.h
firedrake/mlir_backend/src/: BasisFunctions.cpp  FEMOps.td  FEMPatterns.cpp  FiredrakeDialects.cpp  FiredrakeDialectsProper.cpp  FiredrakeDialectsSimple.cpp  FiredrakeMLIR.cpp  FiredrakePasses.cpp  GEMOps.td  GeometricTransformations.cpp  MemoryOptimization.cpp  QuadratureIntegration.cpp  SparseTensorSupport.cpp  UFL2MLIR.cpp  UFL2MLIR.cpp.backup  UFL2MLIRAdvanced.cpp  UFL2MLIRFixed.cpp
firedrake/mlir_backend/test/: CMakeLists.txt  mlir_test_helpers.cpp  run_tests.sh  simple_test.cpp  test_comprehensive_mlir.py  test_mlir_comprehensive.cpp  test_utils.cpp  test_utils.h  validate_mlir_complete.py
firedrake/mlir_backend/test/benchmarks/: benchmark_mlir_vs_tsfc.py
firedrake/mlir_backend/test/integration/: test_fem_assembly.cpp  test_optimization_pipeline.cpp  test_ufl_to_mlir.cpp
firedrake/mlir_backend/test/unit/: test_basis_functions.cpp  test_dialect_loading.cpp  test_fem_kernel.cpp  test_geometric_transformations.cpp  test_memory_optimization.cpp  test_pass_pipeline.cpp  test_pattern_rewriting.cpp  test_quadrature_integration.cpp  test_sparse_tensor.cpp  test_vector_ops.cpp
firedrake/mlir_backend/test/validation/: test_tsfc_comparison.py
